# pofe

./: .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: programming_rule.instructions.md
.pofe/: config.json
context/: overview.json
docs/rs/: 1.md  2.md  3.md
pofe/: cli.py  editor_adapter.py  history_logger.py  requirement_store.py  user_manager.py
pofe/prompts/: analyze_rs.md
prompts/: analyze_rs.md  rs_to_sad.md
smell_detector/: long_method.py
src/: __init__.py  data_clumps.py  duplicate_code.py  large_class.py  long_method.py  main.py  models.py  primitive_obsession.py  switch_statements.py  temporary_field.py  uid.py
src/ai/: agent.py  ai_analysis_engine.py  model.py
src/context/: context_manager.py
src/services/: architecture_design_service.py  implementation_design_service.py  project_initializer.py  requirement_management_service.py
tests/: test_data_clumps.py  test_duplicate_code.py  test_large_class.py  test_long_method.py  test_primitive_obsession.py  test_switch_statements.py  test_temporary_field.py
