[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pofe"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
pofe = "pofe.cli:main"

[tool.setuptools.packages.find]
include = ["pofe*"]

[tool.setuptools.package-data]
pofe = ["prompts/*.md"]
